# Observatory

./: CMakeLists.txt  catalog.json  mainwindow.cpp  mainwindow.h  observatory.cpp  observatory.h  Гумницкий ТЗ.docx
